--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,61 +1,63 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
 
-    <link rel="manifest" href="/manifest.json" />
-    <meta name="theme-color" content="#763C28" />
-    <meta name="msapplication-navbutton-color" content="#763C28" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="#763C28" />
+<head>
+  <meta charset="UTF-8" />
 
-    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-title" content="on hands" />
-    <meta name="description" content="on hands" />
-    <meta name="keywords" content="on hands" />
-    <meta name="author" content="on hands" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>On hands</title>
+  <link rel="manifest" href="/manifest.json" />
+  <meta name="theme-color" content="#763C28" />
+  <meta name="msapplication-navbutton-color" content="#763C28" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="#763C28" />
 
-    <script type="text/javascript">
-      (function (c, l, a, r, i, t, y) {
-        c[a] =
-          c[a] ||
-          function () {
-            (c[a].q = c[a].q || []).push(arguments);
-          };
-        t = l.createElement(r);
-        t.async = 1;
-        t.src = "https://www.clarity.ms/tag/" + i;
-        y = l.getElementsByTagName(r)[0];
-        y.parentNode.insertBefore(t, y);
-      })(window, document, "clarity", "script", "l2ft8zrd5i");
-    </script>
-  </head>
+  <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-title" content="on hands" />
+  <meta name="description" content="on hands" />
+  <meta name="keywords" content="on hands" />
+  <meta name="author" content="on hands" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Visualiza ai</title>
 
-  <script>
-    if ("serviceWorker" in navigator) {
-      window.addEventListener("load", function () {
-        navigator.serviceWorker.register("/js/service-worker.js").then(
-          function (registration) {
-            console.log(
-              "ServiceWorker registration successful with scope: ",
-              registration.scope
-            );
-          },
-          function (err) {
-            console.log("ServiceWorker registration failed: ", err);
-          }
-        );
-      });
-    }
+  <script type="text/javascript">
+    (function (c, l, a, r, i, t, y) {
+      c[a] =
+        c[a] ||
+        function () {
+          (c[a].q = c[a].q || []).push(arguments);
+        };
+      t = l.createElement(r);
+      t.async = 1;
+      t.src = "https://www.clarity.ms/tag/" + i;
+      y = l.getElementsByTagName(r)[0];
+      y.parentNode.insertBefore(t, y);
+    })(window, document, "clarity", "script", import.meta.env.VITE_CLARITY_ID);
   </script>
+</head>
 
-  <body>
-    <div id="pay-modal"></div>
-    <div id="preview-img"></div>
-    <div id="block-page"></div>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<script>
+  if ("serviceWorker" in navigator) {
+    window.addEventListener("load", function () {
+      navigator.serviceWorker.register("/src/service/service-worker.js").then(
+        function (registration) {
+          console.log(
+            "ServiceWorker registration successful with scope: ",
+            registration.scope
+          );
+        },
+        function (err) {
+          console.log("ServiceWorker registration failed: ", err);
+        }
+      );
+    });
+  }
+</script>
+
+<body>
+  <div id="pay-modal"></div>
+  <div id="preview-img"></div>
+  <div id="block-page"></div>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
