chore: Update meta tags for visualiza ai branding

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,10 +11,10 @@
 
   <link rel="icon" type="image/svg+xml" href="/logo.svg" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-title" content="on hands" />
-  <meta name="description" content="on hands" />
-  <meta name="keywords" content="on hands" />
-  <meta name="author" content="on hands" />
+  <meta name="apple-mobile-web-app-title" content="visualiza ai" />
+  <meta name="description" content="visualiza ai" />
+  <meta name="keywords" content="visualiza ai" />
+  <meta name="author" content="visualiza ai" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Visualiza ai</title>
 
