chore: Update service worker registration and cache names

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -35,17 +35,17 @@
 </head>
 
 <script>
-  if ("serviceWorker" in navigator) {
-    window.addEventListener("load", function () {
-      navigator.serviceWorker.register("/src/service/service-worker.js").then(
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', function () {
+      navigator.serviceWorker.register('/src/service/service-worker.js').then(
         function (registration) {
           console.log(
-            "ServiceWorker registration successful with scope: ",
+            'ServiceWorker registration successful with scope: ',
             registration.scope
           );
         },
         function (err) {
-          console.log("ServiceWorker registration failed: ", err);
+          console.log('ServiceWorker registration failed: ', err);
         }
       );
     });
