refactor(frontend): Update loading component and fix file structure

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -53,6 +53,7 @@
 </script>
 
 <body>
+  <div id="loading"></div>
   <div id="pay-modal"></div>
   <div id="preview-img"></div>
   <div id="block-page"></div>
