chore(frontend): Add Cart component to index.html and create portal for Cart component

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -57,6 +57,7 @@
   <div id="pay-modal"></div>
   <div id="preview-img"></div>
   <div id="block-page"></div>
+  <div class="z-50 relative" id="cart"></div>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
